--- a/index.html
+++ b/index.html
@@ -38,6 +38,47 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1 class="blogTitle">Top Blogs</h1>
+        <div class="blogs">
+          <article class="sBlogs">
+            <div class="blogs-thumnell">
+              <img src="images/Mask Group.png" alt="" />
+            </div>
+            <div class="blogs-details">
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <p>By <a href="#">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="sBlogs">
+            <div class="blogs-thumnell">
+              <img src="images/Mask Group.png" alt="" />
+            </div>
+            <div class="blogs-details">
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <p>By <a href="#">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="sBlogs">
+            <div class="blogs-thumnell">
+              <img src="images/Mask Group.png" alt="" />
+            </div>
+            <div class="blogs-details">
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <p>By <a href="#">Danny Sapio</a></p>
+            </div>
+          </article>
+          <article class="sBlogs">
+            <div class="blogs-thumnell">
+              <img src="images/Mask Group.png" alt="" />
+            </div>
+            <div class="blogs-details">
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <p>By <a href="#">Danny Sapio</a></p>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
   </body>
 </html>
