--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
       <section>
-        <h1 class="section-title">Top Players</h1>
+        <h1 class="saction-tittle">Top Players</h1>
         <div class="top-players">
           <div class="single-players">
             <img src="images/Ellipse.png" alt="" />
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section>
-        <h1 class="blogTitle">Top Blogs</h1>
+        <h1 class="saction-tittle">Top Blogs</h1>
         <div class="blogs">
           <article class="sBlogs">
             <div class="blogs-thumnell">
@@ -79,6 +79,75 @@
           </article>
         </div>
       </section>
+      <section>
+        <h1 class="saction-tittle">Latest Courses</h1>
+        <div class="courses">
+          <div class="sBoxCourses">
+            <img src="images/Mask Group-3.png" alt="" />
+            <div class="courseDetails">
+              <h3>React Complete Guide 2022</h3>
+              <p><a href="#">Reed Krakoff.</a></p>
+              <div class="courseInfo">
+                <div class="courseRatings">
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star unfilled"></i>
+                </div>
+                <div class="duration">
+                  <i class="far fa-clock"></i>
+                  <span> 1:30hr</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="sBoxCourses">
+            <img src="images/Mask Group-4.png" alt="" />
+            <div class="courseDetails">
+              <h3>React Complete Guide 2022</h3>
+              <p><a href="#">Reed Krakoff.</a></p>
+              <div class="courseInfo">
+                <div class="courseRatings">
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star unfilled"></i>
+                </div>
+                <div class="duration">
+                  <i class="far fa-clock"></i>
+                  <span> 1:30hr</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="sBoxCourses">
+            <img src="images/Mask Group-5.png" alt="" />
+            <div class="courseDetails">
+              <h3>React Complete Guide 2022</h3>
+              <p><a href="#">Reed Krakoff.</a></p>
+              <div class="courseInfo">
+                <div class="courseRatings">
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star filled"></i>
+                  <i class="fas fa-star unfilled"></i>
+                </div>
+                <div class="duration">
+                  <i class="far fa-clock"></i>
+                  <span> 1:30hr</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <script
+      src="https://kit.fontawesome.com/ee3c098242.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
